# webgl2

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  build-wasm-fixed.bat  build-wasm.bat  build_output.txt  check_exports.js  check_naga.rs  coverage.md  demo-webgpu.js  demo.js  demo_webgpu.js  features.md  index.html  index.js  index2.js  package-lock.json  package.json  test-build.sh  webgl2.wasm
.cargo/: config.toml
docs/: 1-plan.md  1.1-ir-wasm.md  1.1.1-webgl2-prototype.md  1.1.2-texture.md  1.1.3-distill.md  1.1.3-rust-wasm-test-coverage.md  1.1.3-rust-wasm-test-runner.md  1.1.4-coverage.md  1.1.5-next-steps.md  1.10-backend-uplift.md  1.11.a-decompile-wasmdec.md  1.11.b-decompile-theory.md  1.13-wasm-link.md  1.15-renderer.md  1.16-webgpu-launch.md  1.2-webgpu.md  1.3-debug.md  1.4-typify.md  1.5-backend-boost.md  1.6-rust-coverage-join.md  1.7-shaders-returns.md  1.7.1-layout-maths.md  1.8-errors.md  1.9-wat-testing.md  10.1-calls.md  10.1.1-calls-special.md  12-webgl-uplift.md  14-naga-uplift.md  14.1-wgpu-tweaks.md  14.2-group-2.2-complete.md  15-renderer-implementation.md  15-renderer.md  2.0-gpgpu-gap-analysis.md  2.1-unscratch.md  2.2-untrampoline.md  3-unalloc.md  4-wgpu-missing-builtins.md  webgpu-status.md
docs/tbd/: 1.0.1-setup-complete.md  1.0.2-abi.md  1.1.1.1-quickstart-v2.md  1.1.1.2-implementation-v2.md  1.1.1.3-implementation-complete.md
examples/: 01-basic-pipeline.rs
runner2/: .gitignore  Cargo.toml  build_post.js  package.json  runner.js
runner2/src/: lib.rs  runner_satellite.js
runners/: adapter.js  node_runner.js
scripts/: build-wasm.cjs  build-wasm.js  setup-wasm-tests.sh
src/: coverage.rs  error.rs  lib.rs  webgl2_context.js  webgl2_context.rs  webgl2_resources.js  webgl2_texture.js  webgpu_context.js
src/decompiler/: ast.rs  emitter.rs  lifter.rs  mod.rs  module.rs  parser.rs  simplifier.rs
src/glsl_introspection/: annotations.rs  manifest.rs  mod.rs  parser.rs
src/js_codegen/: generator.rs  mod.rs  types.rs
src/naga_wasm_backend/: backend.rs  builtins.rs  call_lowering.rs  control_flow.rs  expressions.rs  frame_allocator.rs  function_abi.rs  memory_layout.rs  mod.rs  output_layout.rs  tests.rs  types.rs
src/naga_wasm_backend/debug/: dwarf.rs  mod.rs  spans.rs  stub.rs  variables.rs
src/naga_wasm_backend/functions/: mod.rs  prep.rs  registry.rs  tests.rs
src/wasm_gl_emu/: device.rs  framebuffer.rs  imaging.rs  mod.rs  pipeline.rs  rasterizer.rs  rasterizer_tests.rs  runtime_native.rs  runtime_wasmi.rs  runtime_web.rs  state.rs  texture.rs  transfer.rs
src/webgl2_context/: blend.rs  buffers.rs  drawing.rs  ephemeral.rs  framebuffers.rs  mod.rs  registry.rs  renderbuffers.rs  shaders.rs  state.rs  textures.rs  transform_feedback.rs  types.rs  vaos.rs
src/webgpu/: adapter.rs  backend.rs  bind_group.rs  buffer.rs  command.rs  mod.rs  pipeline.rs  shader.rs  tests.rs  texture.rs
test/: activeTexture.test.js  all-coverage.js  attachShader.test.js  backend_control_flow.test.js  backend_wasm_checks.test.js  beginQuery.test.js  beginTransformFeedback.test.js  bindAttribLocation.test.js  bindBuffer.test.js  bindFramebuffer.test.js  bindRenderbuffer.test.js  bindSampler.test.js  bindTexture.test.js  bindTransformFeedback.test.js  bindVertexArray.test.js  blendEquation.test.js  blendEquationSeparate.test.js  blendFunc.test.js  blendFuncSeparate.test.js  blitFramebuffer.test.js  bufferData.test.js  bufferSubData.test.js  checkFramebufferStatus.test.js  check_attrib_locations.test.js  clear.test.js  clearColor.test.js  clearDepth.test.js  clientWaitSync.test.js  colorMask.test.js  compileShader.test.js  complexShader.test.js  context_size_init.test.js  copyBufferSubData.test.js  copyTexImage2D.test.js  copyTexSubImage2D.test.js  coverage.test.js  coverage_spotcheck.test.js  createBuffer.test.js  createFramebuffer.test.js  createProgram.test.js  (+139 more)
test/gpgpu/: graph-laplacian.test.js  layout.test.js
test/khronos/: README.md
test/khronos/attrib/: gl-bindAttribLocation-aliasing-inactive.test.js  gl-vertex-attrib-i-render.test.js  gl-vertex-attrib-normalized-int.test.js  gl-vertex-attrib.test.js  gl-vertexattribipointer-offsets.test.js  gl-vertexattribipointer.test.js  invalid-vertex-attribs.test.js
test/math/: -core.js  acosh.test.js  asinh.test.js  atan2.test.js  atanh.test.js  cos.test.js  cosh.test.js  determinant.test.js  distance.test.js  exp.test.js  faceforward.test.js  fma.test.js  frexp.test.js  inverse.test.js  ldexp.test.js  log.test.js  matrix_uniforms.test.js  modf.test.js  pow.test.js  reflect.test.js  refract.test.js  sin.test.js  sinh.test.js  smoothstep.test.js  tanh.test.js
test/samplers/: README.md  r32f.test.js  r32ui.test.js  rgba32f.test.js  rgba32ui.test.js  rgba8_unorm.test.js  texelFetch3d.test.js
test/snapshots/webgl2/: abi_arrays.js  abi_arrays.test.js  abi_edge_cases.js  abi_edge_cases.test.js  abi_entrypoint.js  abi_entrypoint.test.js  abi_flatten.js  abi_flatten.test.js  abi_large_struct.js  abi_large_struct.test.js  abi_matrices.js  abi_matrices.test.js  abi_mixed_params.js  abi_mixed_params.test.js  abi_nested_calls.js  abi_nested_calls.test.js  abi_returns.js  abi_returns.test.js  abi_types.js  (+3 more)
test/webgpu/: copyBuffer.test.js  webgpu_bind_groups.test.js  webgpu_clear_copy.test.js  webgpu_destroy.test.js  webgpu_errors.test.js  webgpu_metadata.test.js  webgpu_rendering.test.js
test_debug/: sampler_uv_debug.js
tests/: wasm_bindgen.rs
tests/fixtures/: README.md  simple.frag  simple.vert
