[package]
name = "webgl2"
version = "1.2.7"
edition = "2021"
license-file = "LICENSE"
authors = ["WebGL2 Platform Team"]
repository = "https://github.com/mavity/webgl2"
description = "WebGL2 shader compiler, emulator, and debugger"

# No native binary in this package; this crate is WASM/library-only

[lib]
name = "webgl2"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core shader infrastructure
naga = { version = "28.0.0", path = "wgpu-fork/naga", features = ["glsl-in", "wgsl-in"] }

# WebGPU infrastructure (wasm32-compatible)
wgpu-core = { version = "28.0.0", path = "wgpu-fork/wgpu-core", default-features = false, features = ["noop", "std", "wgsl"] }
wgpu-types = { version = "28.0.0", path = "wgpu-fork/wgpu-types" }
wgpu-hal = { version = "28.0.0", path = "wgpu-fork/wgpu-hal", default-features = false, features = [] }

# WASM generation
wasm-encoder = "0.220"
wasmparser = "0.220"
wasmprinter = "0.220"
# Use a modern walrus (newer gimli/indexmap compat). Bump from 0.22 -> 0.24.x
walrus = "0.24.4"

# DWARF debug info
gimli = { version = "0.31", features = ["write"] }
object = "0.36"

# WASM runtime (native runtime removed for wasm-only package)

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"], optional = true }

# Code generation
tera = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Expression simplification (equality saturation)
egg = "0.9"
ordered-float = "4.2"

# CLI removed from this package; move native CLI/tools to an external repo or tools/ directory

# Random number generation (wasm requires "js" feature)
getrandom = { version = "0.2", features = ["js"] }
rustc-demangle = "0.1.26"
raw-window-handle = "0.6"
micromath = "2.1.0"

# Browser bindings (optional, for web runtime)

# moved to wasm32 target-specific dependencies to avoid pulling them during host builds

[dev-dependencies]
insta = "1.40"

[features]
# Enable web runtime (wasm-bindgen + web-sys)
web = ["wasm-bindgen", "js-sys", "web-sys"]
# Optional CLI feature (gates native CLI binary). Not enabled by default.
cli = ["clap"]
# Enable coverage instrumentation support
coverage = []
# Default: no optional features enabled by default to avoid pulling platform-specific
# dependencies. This crate is WASM-first.
default = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Browser bindings for wasm32 target
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["WebGl2RenderingContext", "HtmlCanvasElement"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# Test harness for running Rust tests compiled to Wasm. Keep as a target-specific
# dev-dependency so it doesn't affect normal builds or production artifacts.
wasm-bindgen-test = "0.3"

[profile.coverage]
inherits = "release"
opt-level = 1
debug = true

[[bin]]
name = "distill_wasm"
path = "src/bin/distill_wasm.rs"
required-features = ["cli"]
