[package]
name = "runner2_runner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
object = "0.30"
gimli = { version = "0.32.3", features = ["read", "std"] }
base64 = "0.21"
wasmparser = "0.220"
addr2line = "0.25.1"
